Antlr4/MileLex/target/generated-sources/antlr4/sovParser.java
// Generated from sov.g4 by ANTLR 4.6
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class sovParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, PROGRAM=2, VAR=3, PRINTLN=4, READ_SOV=5, ABS_FUN=6, SIN_FUN=7, 
		COS_FUN=8, SQRT_FUN=9, POW_FUN=10, PLUS=11, MINUS=12, MULT=13, DIV=14, 
		AND=15, OR=16, NOT=17, GT=18, LT=19, GEQ=20, LEQ=21, EQ=22, NEQ=23, ASSIGN=24, 
		COMA=25, BRACKET_OPEN=26, BRACKET_CLOSE=27, PAR_OPEN=28, PAR_CLOSE=29, 
		SEMICOLON=30, COMMENTSTART=31, NUMBER_NAT=32, STRING=33, NUMERIC_TYPE=34, 
		BOOLEAN_TYPE=35, STRING_TYPE=36, FOR_SOV=37, WHILE_SOV=38, IF_SOV=39, 
		ELSIF_SOV=40, ELSE_SOV=41, TRUE_LITERAL=42, FALSE_LITERAL=43, CONST_SOV=44, 
		ID=45, WS=46, COMMENT=47, LINE_COMMENT=48;
	public static final int
		RULE_r = 0, RULE_sov = 1, RULE_sentence = 2, RULE_funcionesmat = 3, RULE_condicion = 4, 
		RULE_operaciones = 5, RULE_numeric_declaration = 6, RULE_numeric_assign = 7, 
		RULE_print = 8, RULE_inCaseOf = 9, RULE_otherwise = 10, RULE_declaration = 11, 
		RULE_booleanassign = 12, RULE_booleandeclaration = 13, RULE_string_assign = 14, 
		RULE_loopwhile = 15, RULE_read = 16, RULE_doubleoperator = 17, RULE_fromTo = 18;
	public static final String[] ruleNames = {
		"r", "sov", "sentence", "funcionesmat", "condicion", "operaciones", "numeric_declaration", 
		"numeric_assign", "print", "inCaseOf", "otherwise", "declaration", "booleanassign", 
		"booleandeclaration", "string_assign", "loopwhile", "read", "doubleoperator", 
		"fromTo"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'hello'", "'sov'", "'type'", "'show'", "'reader'", "'absolute'", 
		"'sin'", "'cos'", "'squareRoot'", "'elevated'", "'+'", "'-'", "'*'", "'/'", 
		"'&&'", "'||'", "'!'", "'>'", "'<'", "'>='", "'<='", "'=='", "'!='", "'='", 
		"','", "'{'", "'}'", "'('", "')'", "';'", "'//'", null, null, "'numeric'", 
		"'logic'", "'chain'", "'fromTo'", "'asLongAs'", "'inCaseOf'", "'inCaseOfAnother'", 
		"'otherWise'", "'valid'", "'invalid'", "'const'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, "PROGRAM", "VAR", "PRINTLN", "READ_SOV", "ABS_FUN", "SIN_FUN", 
		"COS_FUN", "SQRT_FUN", "POW_FUN", "PLUS", "MINUS", "MULT", "DIV", "AND", 
		"OR", "NOT", "GT", "LT", "GEQ", "LEQ", "EQ", "NEQ", "ASSIGN", "COMA", 
		"BRACKET_OPEN", "BRACKET_CLOSE", "PAR_OPEN", "PAR_CLOSE", "SEMICOLON", 
		"COMMENTSTART", "NUMBER_NAT", "STRING", "NUMERIC_TYPE", "BOOLEAN_TYPE", 
		"STRING_TYPE", "FOR_SOV", "WHILE_SOV", "IF_SOV", "ELSIF_SOV", "ELSE_SOV", 
		"TRUE_LITERAL", "FALSE_LITERAL", "CONST_SOV", "ID", "WS", "COMMENT", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "sov.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public sovParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(sovParser.ID, 0); }
		public RContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof sovListener ) ((sovListener)listener).enterR(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof sovListener ) ((sovListener)listener).exitR(this);
		}
	}

	public final RContext r() throws RecognitionException {
		RContext _localctx = new RContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_r);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			match(T__0);
			setState(39);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SovContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(sovParser.PROGRAM, 0); }
		public TerminalNode ID() { return getToken(sovParser.ID, 0); }
		public TerminalNode BRACKET_OPEN() { return getToken(sovParser.BRACKET_OPEN, 0); }
		public TerminalNode BRACKET_CLOSE() { return getToken(sovParser.BRACKET_CLOSE, 0); }
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public SovContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sov; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof sovListener ) ((sovListener)listener).enterSov(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof sovListener ) ((sovListener)listener).exitSov(this);
		}
	}

	public final SovContext sov() throws RecognitionException {
		SovContext _localctx = new SovContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sov);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			match(PROGRAM);
			setState(42);
			match(ID);
			setState(43);
			match(BRACKET_OPEN);
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << PRINTLN) | (1L << READ_SOV) | (1L << ABS_FUN) | (1L << SIN_FUN) | (1L << COS_FUN) | (1L << SQRT_FUN) | (1L << POW_FUN) | (1L << NUMBER_NAT) | (1L << NUMERIC_TYPE) | (1L << BOOLEAN_TYPE) | (1L << FOR_SOV) | (1L << WHILE_SOV) | (1L << IF_SOV) | (1L << ELSIF_SOV) | (1L << ELSE_SOV) | (1L << TRUE_LITERAL) | (1L << FALSE_LITERAL) | (1L << ID))) != 0)) {
				{
				{
				setState(44);
				sentence();
				}
				}
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(50);
			match(BRACKET_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenceContext extends ParserRuleContext {
		public Numeric_assignContext numeric_assign() {
			return getRuleContext(Numeric_assignContext.class,0);
		}
		public Numeric_declarationContext numeric_declaration() {
			return getRuleContext(Numeric_declarationContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public BooleanassignContext booleanassign() {
			return getRuleContext(BooleanassignContext.class,0);
		}
		public BooleandeclarationContext booleandeclaration() {
			return getRuleContext(BooleandeclarationContext.class,0);
		}
		public OperacionesContext operaciones() {
			return getRuleContext(OperacionesContext.class,0);
		}
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public LoopwhileContext loopwhile() {
			return getRuleContext(LoopwhileContext.class,0);
		}
		public ReadContext read() {
			return getRuleContext(ReadContext.class,0);
		}
		public FuncionesmatContext funcionesmat() {
			return getRuleContext(FuncionesmatContext.class,0);
		}
		public FromToContext fromTo() {
			return getRuleContext(FromToContext.class,0);
		}
		public String_assignContext string_assign() {
			return getRuleContext(String_assignContext.class,0);
		}
		public InCaseOfContext inCaseOf() {
			return getRuleContext(InCaseOfContext.class,0);
		}
		public OtherwiseContext otherwise() {
			return getRuleContext(OtherwiseContext.class,0);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof sovListener ) ((sovListener)listener).enterSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof sovListener ) ((sovListener)listener).exitSentence(this);
		}
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sentence);
		try {
			setState(67);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(52);
				numeric_assign();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(53);
				numeric_declaration();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(54);
				declaration();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(55);
				booleanassign();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(56);
				booleandeclaration();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(57);
				operaciones();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(58);
				condicion();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(59);
				print();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(60);
				loopwhile();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(61);
				read();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(62);
				funcionesmat();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(63);
				fromTo();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(64);
				string_assign();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(65);
				inCaseOf();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(66);
				otherwise();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncionesmatContext extends ParserRuleContext {
		public TerminalNode PAR_OPEN() { return getToken(sovParser.PAR_OPEN, 0); }
		public TerminalNode PAR_CLOSE() { return getToken(sovParser.PAR_CLOSE, 0); }
		public TerminalNode ABS_FUN() { return getToken(sovParser.ABS_FUN, 0); }
		public TerminalNode SIN_FUN() { return getToken(sovParser.SIN_FUN, 0); }
		public TerminalNode COS_FUN() { return getToken(sovParser.COS_FUN, 0); }
		public TerminalNode SQRT_FUN() { return getToken(sovParser.SQRT_FUN, 0); }
		public TerminalNode POW_FUN() { return getToken(sovParser.POW_FUN, 0); }
		public TerminalNode ID() { return getToken(sovParser.ID, 0); }
		public TerminalNode NUMBER_NAT() { return getToken(sovParser.NUMBER_NAT, 0); }
		public FuncionesmatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcionesmat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof sovListener ) ((sovListener)listener).enterFuncionesmat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof sovListener ) ((sovListener)listener).exitFuncionesmat(this);
		}
	}

	public final FuncionesmatContext funcionesmat() throws RecognitionException {
		FuncionesmatContext _localctx = new FuncionesmatContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_funcionesmat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ABS_FUN) | (1L << SIN_FUN) | (1L << COS_FUN) | (1L << SQRT_FUN) | (1L << POW_FUN))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(70);
			match(PAR_OPEN);
			setState(71);
			_la = _input.LA(1);
			if ( !(_la==NUMBER_NAT || _la==ID) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(72);
			match(PAR_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondicionContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(sovParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(sovParser.ID, i);
		}
		public List<TerminalNode> NUMBER_NAT() { return getTokens(sovParser.NUMBER_NAT); }
		public TerminalNode NUMBER_NAT(int i) {
			return getToken(sovParser.NUMBER_NAT, i);
		}
		public List<TerminalNode> TRUE_LITERAL() { return getTokens(sovParser.TRUE_LITERAL); }
		public TerminalNode TRUE_LITERAL(int i) {
			return getToken(sovParser.TRUE_LITERAL, i);
		}
		public List<TerminalNode> FALSE_LITERAL() { return getTokens(sovParser.FALSE_LITERAL); }
		public TerminalNode FALSE_LITERAL(int i) {
			return getToken(sovParser.FALSE_LITERAL, i);
		}
		public TerminalNode EQ() { return getToken(sovParser.EQ, 0); }
		public TerminalNode GT() { return getToken(sovParser.GT, 0); }
		public TerminalNode LT() { return getToken(sovParser.LT, 0); }
		public TerminalNode GEQ() { return getToken(sovParser.GEQ, 0); }
		public TerminalNode LEQ() { return getToken(sovParser.LEQ, 0); }
		public TerminalNode NEQ() { return getToken(sovParser.NEQ, 0); }
		public CondicionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof sovListener ) ((sovListener)listener).enterCondicion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof sovListener ) ((sovListener)listener).exitCondicion(this);
		}
	}

	public final CondicionContext condicion() throws RecognitionException {
		CondicionContext _localctx = new CondicionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_condicion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUMBER_NAT) | (1L << TRUE_LITERAL) | (1L << FALSE_LITERAL) | (1L << ID))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(75);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GT) | (1L << LT) | (1L << GEQ) | (1L << LEQ) | (1L << EQ) | (1L << NEQ))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(76);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUMBER_NAT) | (1L << TRUE_LITERAL) | (1L << FALSE_LITERAL) | (1L << ID))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperacionesContext extends ParserRuleContext {
		public TerminalNode ASSIGN() { return getToken(sovParser.ASSIGN, 0); }
		public List<TerminalNode> ID() { return getTokens(sovParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(sovParser.ID, i);
		}
		public TerminalNode SEMICOLON() { return getToken(sovParser.SEMICOLON, 0); }
		public List<TerminalNode> NUMBER_NAT() { return getTokens(sovParser.NUMBER_NAT); }
		public TerminalNode NUMBER_NAT(int i) {
			return getToken(sovParser.NUMBER_NAT, i);
		}
		public TerminalNode PLUS() { return getToken(sovParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(sovParser.MINUS, 0); }
		public TerminalNode MULT() { return getToken(sovParser.MULT, 0); }
		public TerminalNode DIV() { return getToken(sovParser.DIV, 0); }
		public OperacionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operaciones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof sovListener ) ((sovListener)listener).enterOperaciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof sovListener ) ((sovListener)listener).exitOperaciones(this);
		}
	}

	public final OperacionesContext operaciones() throws RecognitionException {
		OperacionesContext _localctx = new OperacionesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_operaciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			_la = _input.LA(1);
			if ( !(_la==NUMBER_NAT || _la==ID) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(79);
			match(ASSIGN);
			setState(80);
			match(ID);
			setState(81);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PLUS) | (1L << MINUS) | (1L << MULT) | (1L << DIV))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(82);
			_la = _input.LA(1);
			if ( !(_la==NUMBER_NAT || _la==ID) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(83);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Numeric_declarationContext extends ParserRuleContext {
		public TerminalNode NUMERIC_TYPE() { return getToken(sovParser.NUMERIC_TYPE, 0); }
		public List<TerminalNode> ID() { return getTokens(sovParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(sovParser.ID, i);
		}
		public TerminalNode SEMICOLON() { return getToken(sovParser.SEMICOLON, 0); }
		public List<TerminalNode> ASSIGN() { return getTokens(sovParser.ASSIGN); }
		public TerminalNode ASSIGN(int i) {
			return getToken(sovParser.ASSIGN, i);
		}
		public List<TerminalNode> COMA() { return getTokens(sovParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(sovParser.COMA, i);
		}
		public List<TerminalNode> NUMBER_NAT() { return getTokens(sovParser.NUMBER_NAT); }
		public TerminalNode NUMBER_NAT(int i) {
			return getToken(sovParser.NUMBER_NAT, i);
		}
		public List<FuncionesmatContext> funcionesmat() {
			return getRuleContexts(FuncionesmatContext.class);
		}
		public FuncionesmatContext funcionesmat(int i) {
			return getRuleContext(FuncionesmatContext.class,i);
		}
		public Numeric_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numeric_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof sovListener ) ((sovListener)listener).enterNumeric_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof sovListener ) ((sovListener)listener).exitNumeric_declaration(this);
		}
	}

	public final Numeric_declarationContext numeric_declaration() throws RecognitionException {
		Numeric_declarationContext _localctx = new Numeric_declarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_numeric_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(NUMERIC_TYPE);
			setState(86);
			match(ID);
			setState(111);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ASSIGN:
				{
				{
				setState(87);
				match(ASSIGN);
				setState(90);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case NUMBER_NAT:
					{
					setState(88);
					match(NUMBER_NAT);
					}
					break;
				case ABS_FUN:
				case SIN_FUN:
				case COS_FUN:
				case SQRT_FUN:
				case POW_FUN:
					{
					setState(89);
					funcionesmat();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMA) {
					{
					{
					setState(92);
					match(COMA);
					setState(93);
					match(ID);
					setState(94);
					match(ASSIGN);
					setState(97);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case NUMBER_NAT:
						{
						setState(95);
						match(NUMBER_NAT);
						}
						break;
					case ABS_FUN:
					case SIN_FUN:
					case COS_FUN:
					case SQRT_FUN:
					case POW_FUN:
						{
						setState(96);
						funcionesmat();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					}
					setState(103);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				break;
			case COMA:
			case SEMICOLON:
				{
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMA) {
					{
					{
					setState(104);
					match(COMA);
					setState(105);
					match(ID);
					}
					}
					setState(110);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(113);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Numeric_assignContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(sovParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(sovParser.ASSIGN, 0); }
		public TerminalNode SEMICOLON() { return getToken(sovParser.SEMICOLON, 0); }
		public TerminalNode NUMBER_NAT() { return getToken(sovParser.NUMBER_NAT, 0); }
		public FuncionesmatContext funcionesmat() {
			return getRuleContext(FuncionesmatContext.class,0);
		}
		public Numeric_assignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numeric_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof sovListener ) ((sovListener)listener).enterNumeric_assign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof sovListener ) ((sovListener)listener).exitNumeric_assign(this);
		}
	}

	public final Numeric_assignContext numeric_assign() throws RecognitionException {
		Numeric_assignContext _localctx = new Numeric_assignContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_numeric_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(ID);
			setState(116);
			match(ASSIGN);
			setState(119);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMBER_NAT:
				{
				setState(117);
				match(NUMBER_NAT);
				}
				break;
			case ABS_FUN:
			case SIN_FUN:
			case COS_FUN:
			case SQRT_FUN:
			case POW_FUN:
				{
				setState(118);
				funcionesmat();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(121);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintContext extends ParserRuleContext {
		public TerminalNode PRINTLN() { return getToken(sovParser.PRINTLN, 0); }
		public TerminalNode PAR_OPEN() { return getToken(sovParser.PAR_OPEN, 0); }
		public TerminalNode PAR_CLOSE() { return getToken(sovParser.PAR_CLOSE, 0); }
		public TerminalNode SEMICOLON() { return getToken(sovParser.SEMICOLON, 0); }
		public TerminalNode ID() { return getToken(sovParser.ID, 0); }
		public TerminalNode NUMBER_NAT() { return getToken(sovParser.NUMBER_NAT, 0); }
		public TerminalNode STRING() { return getToken(sovParser.STRING, 0); }
		public PrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print; }
		@Override
		public void enterRule(ParseTreeListener listener) {
